[UI] Add header title to webpage

--- a/_til_docs/JavaScript/React/Hooks.html
+++ b/_til_docs/JavaScript/React/Hooks.html
@@ -619,62 +619,62 @@
     </a>
     <nav id="menu">
       <ul>
-<li><a class="" href="../index.html">index</a></li>
-<li><a class="" href="../Authentication.html">Authentication</a></li>
-<li><a class="" href="../DNS_Config.html">DNS Config</a></li>
-<li><a class="" href="../Databases.html">Databases</a></li>
-<li><a class="" href="../Design.html">Design</a></li>
-<li><a class="" href="../Distributed_Systems.html">Distributed Systems</a></li>
+<li><a class="" href="../../index.html">index</a></li>
+<li><a class="" href="../../Authentication.html">Authentication</a></li>
+<li><a class="" href="../../DNS_Config.html">DNS Config</a></li>
+<li><a class="" href="../../Databases.html">Databases</a></li>
+<li><a class="" href="../../Design.html">Design</a></li>
+<li><a class="" href="../../Distributed_Systems.html">Distributed Systems</a></li>
 <li class="heading"><span>Django</span></li>
 <ul>
-<li><a class="" href="../Django/Django.html">Django</a></li>
-<li><a class="" href="../Django/Migrations.html">Migrations</a></li>
-<li><a class="" href="../Django/Models.html">Models</a></li>
-<li><a class="" href="../Django/Querysets.html">Querysets</a></li>
+<li><a class="" href="../../Django/Django.html">Django</a></li>
+<li><a class="" href="../../Django/Migrations.html">Migrations</a></li>
+<li><a class="" href="../../Django/Models.html">Models</a></li>
+<li><a class="" href="../../Django/Querysets.html">Querysets</a></li>
 </ul>
-<li><a class="" href="../Encoding.html">Encoding</a></li>
+<li><a class="" href="../../Encoding.html">Encoding</a></li>
 <li class="heading"><span>Entrepreneurship</span></li>
 <ul>
-<li><a class="" href="../Entrepreneurship/Acronyms.html">Acronyms</a></li>
-<li><a class="" href="../Entrepreneurship/Aquired_Episodes.html">Aquired Episodes</a></li>
-<li><a class="" href="../Entrepreneurship/Business_Analysis.html">Business Analysis</a></li>
-<li><a class="" href="../Entrepreneurship/Terminology.html">Terminology</a></li>
-<li><a class="" href="../Entrepreneurship/Venture_Capital.html">Venture Capital</a></li>
+<li><a class="" href="../../Entrepreneurship/Acronyms.html">Acronyms</a></li>
+<li><a class="" href="../../Entrepreneurship/Aquired_Episodes.html">Aquired Episodes</a></li>
+<li><a class="" href="../../Entrepreneurship/Business_Analysis.html">Business Analysis</a></li>
+<li><a class="" href="../../Entrepreneurship/Terminology.html">Terminology</a></li>
+<li><a class="" href="../../Entrepreneurship/Venture_Capital.html">Venture Capital</a></li>
 </ul>
-<li><a class="" href="../File_Sharing.html">File Sharing</a></li>
-<li><a class="" href="../Frontend.html">Frontend</a></li>
-<li><a class="" href="../HTML.html">HTML</a></li>
+<li><a class="" href="../../File_Sharing.html">File Sharing</a></li>
+<li><a class="" href="../../Frontend.html">Frontend</a></li>
+<li><a class="" href="../../HTML.html">HTML</a></li>
 <li class="heading"><span>JavaScript</span></li>
 <ul>
-<li><a class="" href="../JavaScript/Flux.html">Flux</a></li>
-<li><a class="" href="../JavaScript/JavaScript.html">JavaScript</a></li>
+<li><a class="" href="../Flux.html">Flux</a></li>
+<li><a class="" href="../JavaScript.html">JavaScript</a></li>
 <li class="heading"><span>React</span></li>
 <ul>
-<li><a class="" href="../JavaScript/React/Hooks.html">Hooks</a></li>
-<li><a class="" href="../JavaScript/React/Material-ui.html">Material ui</a></li>
-<li><a class="" href="../JavaScript/React/React-router.html">React router</a></li>
-<li><a class="" href="../JavaScript/React/React.html">React</a></li>
-<li><a class="" href="../JavaScript/React/Testing.html">Testing</a></li>
+<li><a class="active" href="Hooks.html">Hooks</a></li>
+<li><a class="" href="Material-ui.html">Material ui</a></li>
+<li><a class="" href="React-router.html">React router</a></li>
+<li><a class="" href="React.html">React</a></li>
+<li><a class="" href="Testing.html">Testing</a></li>
 </ul>
-<li><a class="" href="../JavaScript/SPAs.html">SPAs</a></li>
-<li><a class="" href="../JavaScript/Vue.html">Vue</a></li>
+<li><a class="" href="../SPAs.html">SPAs</a></li>
+<li><a class="" href="../Vue.html">Vue</a></li>
 </ul>
-<li><a class="" href="../Python.html">Python</a></li>
-<li><a class="" href="../SCSS.html">SCSS</a></li>
-<li><a class="" href="../SoftwareDev_BestPractices.html">SoftwareDev BestPractices</a></li>
+<li><a class="" href="../../Python.html">Python</a></li>
+<li><a class="" href="../../SCSS.html">SCSS</a></li>
+<li><a class="" href="../../SoftwareDev_BestPractices.html">SoftwareDev BestPractices</a></li>
 <li class="heading"><span>TCP IP</span></li>
 <ul>
-<li><a class="" href="ARP-RARP.html">ARP RARP</a></li>
-<li><a class="" href="ICMP.html">ICMP</a></li>
-<li><a class="" href="IP_Addresses.html">IP Addresses</a></li>
-<li><a class="active" href="IP_Fragmentation.html">IP Fragmentation</a></li>
-<li><a class="" href="IP_Subnets.html">IP Subnets</a></li>
-<li><a class="" href="Network_Layers.html">Network Layers</a></li>
-<li><a class="" href="TCP-IP.html">TCP IP</a></li>
-<li><a class="" href="Unix_Specific.html">Unix Specific</a></li>
-<li><a class="" href="routing.html">routing</a></li>
+<li><a class="" href="../../TCP-IP/ARP-RARP.html">ARP RARP</a></li>
+<li><a class="" href="../../TCP-IP/ICMP.html">ICMP</a></li>
+<li><a class="" href="../../TCP-IP/IP_Addresses.html">IP Addresses</a></li>
+<li><a class="" href="../../TCP-IP/IP_Fragmentation.html">IP Fragmentation</a></li>
+<li><a class="" href="../../TCP-IP/IP_Subnets.html">IP Subnets</a></li>
+<li><a class="" href="../../TCP-IP/Network_Layers.html">Network Layers</a></li>
+<li><a class="" href="../../TCP-IP/TCP-IP.html">TCP IP</a></li>
+<li><a class="" href="../../TCP-IP/Unix_Specific.html">Unix Specific</a></li>
+<li><a class="" href="../../TCP-IP/routing.html">routing</a></li>
 </ul>
-<li><a class="" href="../docker-compose.html">docker compose</a></li>
+<li><a class="" href="../../docker-compose.html">docker compose</a></li>
 </ul>
     </nav>
     <article id="main" class="content">
@@ -686,12 +686,88 @@
 
       </div>
       
-      <h1 id="ip-fragmentation">IP Fragmentation <a class="heading-anchor-permalink" href="#ip-fragmentation">#</a></h1>
+      <h1 id="hooks">Hooks <a class="heading-anchor-permalink" href="#hooks">#</a></h1>
 <ul>
-<li>IP fragmentation (splitting up a stream of data into multiple IP packets) occurs at the IP layer and thus is transparent to TCP/UDP</li>
-<li>However, in order to reduce bugs, TCP generally doesn’t send packets to the IP layer requiring fragmentation, handling the breaking up of the packets itself instead</li>
-<li>Datagram: A datagram is the entire unit of end-to-end transmission sent</li>
-<li>Packet: The data (potentially fragmented) that is actually sent</li>
+<li>
+<p>They really are an improvement to class based components</p>
+</li>
+<li>
+<p>New in version <code>16.8</code> and are completely backwards compatible</p>
+</li>
+<li>
+<p><strong>Hooks allow you to split up your components based on pieces of functionality instead of by lifecycle methods</strong></p>
+</li>
+<li>
+<p>They let you “hook” in to <code>React</code> lifecycle methods in functional components</p>
+<ul>
+<li>They don’t work inside classes</li>
+</ul>
+</li>
+</ul>
+<h2 id="usestate">useState <a class="heading-anchor-permalink" href="#usestate">#</a></h2>
+<ul>
+<li>Takes an initial state as an argument and returns the state variable and a function used to update it</li>
+</ul>
+<h2 id="useeffect">useEffect <a class="heading-anchor-permalink" href="#useeffect">#</a></h2>
+<ul>
+<li>Replaces <code>componentDidMount</code>, <code>componentWillUnmount</code> and <code>componentDidUpdate</code></li>
+<li><strong>Both the hook and it’s cleanup code runs every rerender</strong>
+<ul>
+<li>This handles <code>componentDidUpdate</code> for you, leading to fewer bugs</li>
+</ul>
+</li>
+<li>You can pass it a cleanup function to run (essentially <code>componentWillUnmount</code>)</li>
+<li><strong>Only</strong> call hooks at the top level of your function, <strong>never</strong> in if statements or other conditionals
+<ul>
+<li>Hooks depend on being called in the proper order to maintain state across re-renders and conditionals can throw this out of order and break everything</li>
+</ul>
+</li>
+<li>Hooks can replace HOCs and render props by giving you a way to reuse stateful logic
+<ul>
+<li>Custom hooks, etc.</li>
+</ul>
+</li>
+</ul>
+<p>Quick demonstration of why hooks are cool:</p>
+<p>Class-based</p>
+<pre><code class="language-JavaScript">componentDidMount(){
+    setupSubscriptions()
+    getData()
+}
+
+componentDidUnmount(){
+    clearSubscriptions()
+}
+
+</code></pre>
+<p>here, we are forced to group functions by lifecycle methods, not by functionality</p>
+<p>Using hooks, however, this becomes</p>
+<pre><code class="language-JavaScript">
+useEffect(getData)
+useEffect(setupSubscriptions, clearSubscriptions)
+</code></pre>
+<p>Allowing us to group related functionality</p>
+<ul>
+<li>Hooks “hook” into lifecycle methods, you wouldn’t use them for something like an API call when a user clicks a button</li>
+<li>since <code>useEffect</code> runs cleanup code every re-render it handles <code>componentDidUpdate</code> by default</li>
+<li>You can specify when not to run cleanup code by passing an array of vars to shallow compare to <code>useEffect</code></li>
+<li>There is a <code>react-hooks</code> <code>eslint</code> plugin to enforce these hook rules in your code
+<ul>
+<li>No calling hooks in conditionals, etc.</li>
+</ul>
+</li>
+<li><code>React</code> matches local variable state to <code>useState</code>/<code>useEffect</code> in the order in which they were called
+<ul>
+<li>This is how <code>React</code> knows which variable to read for current state for each <code>useState</code> call and preserve state on every re-render
+<ul>
+<li>Recall: for [ myState, setState ] =<code>useState(0)</code> <code>0</code> is just the initial state. Every subsequent call to that <code>useState</code> method grabs the value from <code>myState</code></li>
+</ul>
+</li>
+</ul>
+</li>
+<li>If you need a hook to run conditionally you put the conditional inside the hook</li>
+<li>State is completely isolated per component in hooks</li>
+<li>There are other hooks besides <code>useState</code> and <code>useEffect</code> in the <code>React</code> API and you can also write your own as a combination of the API’s primitives (<code>useState</code>, <code>useEffect</code>, etc.)</li>
 </ul>
 
     </article>
