--- a/_til_docs/JavaScript/React/Material-ui.html
+++ b/_til_docs/JavaScript/React/Material-ui.html
@@ -619,62 +619,62 @@
     </a>
     <nav id="menu">
       <ul>
-<li><a class="" href="../index.html">index</a></li>
-<li><a class="" href="../Authentication.html">Authentication</a></li>
-<li><a class="" href="../DNS_Config.html">DNS Config</a></li>
-<li><a class="" href="../Databases.html">Databases</a></li>
-<li><a class="" href="../Design.html">Design</a></li>
-<li><a class="" href="../Distributed_Systems.html">Distributed Systems</a></li>
+<li><a class="" href="../../index.html">index</a></li>
+<li><a class="" href="../../Authentication.html">Authentication</a></li>
+<li><a class="" href="../../DNS_Config.html">DNS Config</a></li>
+<li><a class="" href="../../Databases.html">Databases</a></li>
+<li><a class="" href="../../Design.html">Design</a></li>
+<li><a class="" href="../../Distributed_Systems.html">Distributed Systems</a></li>
 <li class="heading"><span>Django</span></li>
 <ul>
-<li><a class="" href="../Django/Django.html">Django</a></li>
-<li><a class="" href="../Django/Migrations.html">Migrations</a></li>
-<li><a class="" href="../Django/Models.html">Models</a></li>
-<li><a class="" href="../Django/Querysets.html">Querysets</a></li>
+<li><a class="" href="../../Django/Django.html">Django</a></li>
+<li><a class="" href="../../Django/Migrations.html">Migrations</a></li>
+<li><a class="" href="../../Django/Models.html">Models</a></li>
+<li><a class="" href="../../Django/Querysets.html">Querysets</a></li>
 </ul>
-<li><a class="" href="../Encoding.html">Encoding</a></li>
+<li><a class="" href="../../Encoding.html">Encoding</a></li>
 <li class="heading"><span>Entrepreneurship</span></li>
 <ul>
-<li><a class="" href="../Entrepreneurship/Acronyms.html">Acronyms</a></li>
-<li><a class="" href="../Entrepreneurship/Aquired_Episodes.html">Aquired Episodes</a></li>
-<li><a class="" href="../Entrepreneurship/Business_Analysis.html">Business Analysis</a></li>
-<li><a class="" href="../Entrepreneurship/Terminology.html">Terminology</a></li>
-<li><a class="" href="../Entrepreneurship/Venture_Capital.html">Venture Capital</a></li>
+<li><a class="" href="../../Entrepreneurship/Acronyms.html">Acronyms</a></li>
+<li><a class="" href="../../Entrepreneurship/Aquired_Episodes.html">Aquired Episodes</a></li>
+<li><a class="" href="../../Entrepreneurship/Business_Analysis.html">Business Analysis</a></li>
+<li><a class="" href="../../Entrepreneurship/Terminology.html">Terminology</a></li>
+<li><a class="" href="../../Entrepreneurship/Venture_Capital.html">Venture Capital</a></li>
 </ul>
-<li><a class="" href="../File_Sharing.html">File Sharing</a></li>
-<li><a class="" href="../Frontend.html">Frontend</a></li>
-<li><a class="" href="../HTML.html">HTML</a></li>
+<li><a class="" href="../../File_Sharing.html">File Sharing</a></li>
+<li><a class="" href="../../Frontend.html">Frontend</a></li>
+<li><a class="" href="../../HTML.html">HTML</a></li>
 <li class="heading"><span>JavaScript</span></li>
 <ul>
-<li><a class="" href="../JavaScript/Flux.html">Flux</a></li>
-<li><a class="" href="../JavaScript/JavaScript.html">JavaScript</a></li>
+<li><a class="" href="../Flux.html">Flux</a></li>
+<li><a class="" href="../JavaScript.html">JavaScript</a></li>
 <li class="heading"><span>React</span></li>
 <ul>
-<li><a class="" href="../JavaScript/React/Hooks.html">Hooks</a></li>
-<li><a class="" href="../JavaScript/React/Material-ui.html">Material ui</a></li>
-<li><a class="" href="../JavaScript/React/React-router.html">React router</a></li>
-<li><a class="" href="../JavaScript/React/React.html">React</a></li>
-<li><a class="" href="../JavaScript/React/Testing.html">Testing</a></li>
+<li><a class="" href="Hooks.html">Hooks</a></li>
+<li><a class="active" href="Material-ui.html">Material ui</a></li>
+<li><a class="" href="React-router.html">React router</a></li>
+<li><a class="" href="React.html">React</a></li>
+<li><a class="" href="Testing.html">Testing</a></li>
 </ul>
-<li><a class="" href="../JavaScript/SPAs.html">SPAs</a></li>
-<li><a class="" href="../JavaScript/Vue.html">Vue</a></li>
+<li><a class="" href="../SPAs.html">SPAs</a></li>
+<li><a class="" href="../Vue.html">Vue</a></li>
 </ul>
-<li><a class="" href="../Python.html">Python</a></li>
-<li><a class="" href="../SCSS.html">SCSS</a></li>
-<li><a class="" href="../SoftwareDev_BestPractices.html">SoftwareDev BestPractices</a></li>
+<li><a class="" href="../../Python.html">Python</a></li>
+<li><a class="" href="../../SCSS.html">SCSS</a></li>
+<li><a class="" href="../../SoftwareDev_BestPractices.html">SoftwareDev BestPractices</a></li>
 <li class="heading"><span>TCP IP</span></li>
 <ul>
-<li><a class="" href="ARP-RARP.html">ARP RARP</a></li>
-<li><a class="" href="ICMP.html">ICMP</a></li>
-<li><a class="" href="IP_Addresses.html">IP Addresses</a></li>
-<li><a class="active" href="IP_Fragmentation.html">IP Fragmentation</a></li>
-<li><a class="" href="IP_Subnets.html">IP Subnets</a></li>
-<li><a class="" href="Network_Layers.html">Network Layers</a></li>
-<li><a class="" href="TCP-IP.html">TCP IP</a></li>
-<li><a class="" href="Unix_Specific.html">Unix Specific</a></li>
-<li><a class="" href="routing.html">routing</a></li>
+<li><a class="" href="../../TCP-IP/ARP-RARP.html">ARP RARP</a></li>
+<li><a class="" href="../../TCP-IP/ICMP.html">ICMP</a></li>
+<li><a class="" href="../../TCP-IP/IP_Addresses.html">IP Addresses</a></li>
+<li><a class="" href="../../TCP-IP/IP_Fragmentation.html">IP Fragmentation</a></li>
+<li><a class="" href="../../TCP-IP/IP_Subnets.html">IP Subnets</a></li>
+<li><a class="" href="../../TCP-IP/Network_Layers.html">Network Layers</a></li>
+<li><a class="" href="../../TCP-IP/TCP-IP.html">TCP IP</a></li>
+<li><a class="" href="../../TCP-IP/Unix_Specific.html">Unix Specific</a></li>
+<li><a class="" href="../../TCP-IP/routing.html">routing</a></li>
 </ul>
-<li><a class="" href="../docker-compose.html">docker compose</a></li>
+<li><a class="" href="../../docker-compose.html">docker compose</a></li>
 </ul>
     </nav>
     <article id="main" class="content">
@@ -686,12 +686,179 @@
 
       </div>
       
-      <h1 id="ip-fragmentation">IP Fragmentation <a class="heading-anchor-permalink" href="#ip-fragmentation">#</a></h1>
+      <h1 id="material-ui">Material-ui <a class="heading-anchor-permalink" href="#material-ui">#</a></h1>
 <ul>
-<li>IP fragmentation (splitting up a stream of data into multiple IP packets) occurs at the IP layer and thus is transparent to TCP/UDP</li>
-<li>However, in order to reduce bugs, TCP generally doesn’t send packets to the IP layer requiring fragmentation, handling the breaking up of the packets itself instead</li>
-<li>Datagram: A datagram is the entire unit of end-to-end transmission sent</li>
-<li>Packet: The data (potentially fragmented) that is actually sent</li>
+<li>To use spacing utilities you wrap components in a <code>Box</code> component
+<ul>
+<li>Only fully in <code>v4</code></li>
+</ul>
+</li>
+<li>Designed on the font <code>Roboto</code>
+<ul>
+<li>Must include this yourself</li>
+</ul>
+</li>
+<li>Colors can be imported and modified with <code>blue[500]</code> for example</li>
+<li>You can configure the theme through <code>createMuiTheme</code></li>
+<li>Icon names are in PascalCase
+<ul>
+<li>Should use default exports if you don’t have tree-shaking configured (though webpack in production should do this for you)</li>
+</ul>
+</li>
+</ul>
+<h2 id="component-details">Component Details <a class="heading-anchor-permalink" href="#component-details">#</a></h2>
+<ul>
+<li><code>Typography</code>: A container component that you can put sub-components inside. This is used to set the font characteristics of the children</li>
+<li><code>Hidden</code>: A component that allows you to hide components based on breakpoints</li>
+<li><code>Popover</code> and <code>Popper</code>: Open popup menus</li>
+<li><code>ClickAwayListener</code>: Listen to click events <em>not</em> on the component</li>
+</ul>
+<h4 id="transitions">Transitions <a class="heading-anchor-permalink" href="#transitions">#</a></h4>
+<p>Material UI provides transition components that you wrap around the components you want to apply the transition to</p>
+<ul>
+<li><code>Fade</code></li>
+<li><code>Collapse</code></li>
+<li><code>Grow</code></li>
+<li><code>Slide</code></li>
+<li><code>Zoom</code></li>
+</ul>
+<h2 id="layout">Layout <a class="heading-anchor-permalink" href="#layout">#</a></h2>
+<ul>
+<li><code>&lt;Grid&gt;</code>: Responsive UI is based on a 12 column grid layout
+<ul>
+<li>Has <code>xs</code>, <code>sm</code>, <code>md</code>, <code>lg</code>, and <code>xl</code> breakpoints</li>
+<li>Spacing is automatically taken into account when setting the number of columns</li>
+<li>Can define multiple widths on a <code>&lt;Grid item&gt;</code> for resizing at different breakpoints</li>
+<li>Built on Flexbox</li>
+<li>Split into two types: <code>container</code> and <code>item</code> but you can have both, e.g. <code>&lt;Grid container item&gt;</code> for it to be a flex container and flex item</li>
+</ul>
+</li>
+</ul>
+<h4 id="breakpoints">Breakpoints <a class="heading-anchor-permalink" href="#breakpoints">#</a></h4>
+<h5 id="values">Values <a class="heading-anchor-permalink" href="#values">#</a></h5>
+<ul>
+<li><code>xs</code>: 0-599px</li>
+<li><code>sm</code>: 600-959px</li>
+<li><code>md</code>: 960-1279px</li>
+<li><code>lg</code>: 1280-1919px</li>
+<li><code>xl</code>: 1920px or larger</li>
+</ul>
+<h5 id="api">API <a class="heading-anchor-permalink" href="#api">#</a></h5>
+<ul>
+<li><code>useMediaQuery</code>: CSS media Query hook for React</li>
+</ul>
+<h2 id="styling">Styling <a class="heading-anchor-permalink" href="#styling">#</a></h2>
+<ul>
+<li>Inline styling vs classes:
+<ul>
+<li>Only use inline style for dynamic styling</li>
+<li>Classes are much faster, have auto-prefixing, media queries, better debugging, keyframes, etc.</li>
+</ul>
+</li>
+<li><code>withStyles</code>, <code>withTheme</code>, are HOC’s for styling</li>
+<li>CSS in JS is the current standard
+<ul>
+<li>3 different APIs for this:
+<ul>
+<li>Hook API (<code>makeStyles</code>)</li>
+<li>Styled Components API</li>
+<li>Higher order component (HOC) API (<code>withStyles</code>)</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>To modify/obfuscate class names in production you can use a class name generator</li>
+<li><code>ThemeProvider</code> takes a theme property and makes the theme available down the React tree</li>
+<li><code>useTheme()</code>: A hook to return the theme of the stylesheet in a functional component</li>
+<li><code>withStyles()</code>: Link a stylesheet with a component using HOCs</li>
+<li>`withTheme()(Component): Class-based API for providing the theme to a component as a prop</li>
+</ul>
+<h4 id="classes">Classes <a class="heading-anchor-permalink" href="#classes">#</a></h4>
+<ul>
+<li>Can use with withStyles and className</li>
+<li>Class names follow the pattern <code>Mui[&lt;component_name&gt;]-[&lt;style_rule_name&gt;]-UUID</code></li>
+<li>Can use the <code>classnames</code> library to apply multiple class names to an element or just use string interpolation</li>
+<li>All components accept a <code>classes</code> property for customization
+<ul>
+<li>I need to read more about this</li>
+</ul>
+</li>
+</ul>
+<h2 id="interesting%2Fappealing-components-(for-potential-design-use)">Interesting/Appealing Components (For Potential Design Use) <a class="heading-anchor-permalink" href="#interesting%2Fappealing-components-(for-potential-design-use)">#</a></h2>
+<ul>
+<li><code>Breadcrumbs</code> with icons</li>
+<li><code>ToggleButton</code></li>
+<li><code>Avatar</code></li>
+<li><code>Badges</code></li>
+<li><code>Tabs</code> for navbar navigation</li>
+<li><code>IconButtons</code></li>
+<li><code>Button</code> with <code>component={Link}</code></li>
+<li><code>Chips</code></li>
+<li><code>Dialog</code>
+<ul>
+<li>A modal like components that interrupts the user and prompts them to make a decision</li>
+</ul>
+</li>
+<li><code>Divider</code></li>
+<li><code>Drawer</code> for a side nav</li>
+<li><code>ExpansionPanel</code> for an accordian like expansion effect</li>
+<li><code>Menu</code> For profile, login/logout account avatar</li>
+<li><code>Paper</code>
+<ul>
+<li>A flat, opaque component representing paper</li>
+</ul>
+</li>
+<li><code>Progress</code></li>
+<li><code>FormGroup</code></li>
+<li><code>Switch</code></li>
+<li><code>Snackbar</code></li>
+<li><code>Steppers</code></li>
+<li><code>Tables</code> and <code>TablePagination</code></li>
+<li><code>TextField</code>
+<ul>
+<li>Wraps <code>Label</code>, <code>Input</code>, and <code>HelpText</code> components to make it easier to display a nice field</li>
+</ul>
+</li>
+<li><code>Input</code> with adornments (prepended and appended text/icons)
+<ul>
+<li>Can pass the adornments in to <code>TextField</code> as well</li>
+</ul>
+</li>
+<li><code>Tooltip</code>
+<ul>
+<li>Must pass props down to child elements if it is a custom react component</li>
+<li>Otherwise, it will handle the hovering and subsequent activation for you</li>
+</ul>
+</li>
+</ul>
+<h2 id="customization">Customization <a class="heading-anchor-permalink" href="#customization">#</a></h2>
+<ul>
+<li>Inject theme with <code>MuiThemeProvider</code></li>
+<li>The overrides object in <code>createMuiTheme</code> allows you to override every instance of a material-ui component</li>
+<li>You can also apply properties on all instances of a given component with the <code>props</code> keyword in <code>crateMuiTheme</code></li>
+</ul>
+<h2 id="testing">Testing <a class="heading-anchor-permalink" href="#testing">#</a></h2>
+<ul>
+<li><code>createShallow()</code>: Shallow render a component</li>
+<li><code>createMount()</code>: Fully mount the component on the DOM</li>
+<li><code>createRender()</code>: Render component to string</li>
+</ul>
+<h2 id="general-tips">General Tips <a class="heading-anchor-permalink" href="#general-tips">#</a></h2>
+<ul>
+<li>In general, material-ui is a library implementing Google’s material design</li>
+<li>You can code split by moving CSS and JS into different files</li>
+<li>Property spread: Properties flow down from Mui components to their children.</li>
+</ul>
+<p>e.g.</p>
+<pre><code class="language-HTML">&lt;MenuItem disableRipple&gt;
+</code></pre>
+<p><code>disableRipple</code> will flow from <code>MenuItem</code> -&gt; <code>ListItem</code> -&gt; <code>ButtonBase</code> thus disabling the ripple at <code>ButtonBase</code></p>
+<ul>
+<li>The <code>component</code> property of material-ui components allows you to change what the root node renders as. This is how you can integrate with something like <code>react-router</code>
+<ul>
+<li><code>component</code> as a prop should always be passed statically, not with an arrow function directly in the prop, otherwise a new component will have to be created and rendered on every re-render, regardless of whether it changes</li>
+</ul>
+</li>
 </ul>
 
     </article>
