--- a/_til_docs/JavaScript/React/React-router.html
+++ b/_til_docs/JavaScript/React/React-router.html
@@ -619,62 +619,62 @@
     </a>
     <nav id="menu">
       <ul>
-<li><a class="" href="../index.html">index</a></li>
-<li><a class="" href="../Authentication.html">Authentication</a></li>
-<li><a class="" href="../DNS_Config.html">DNS Config</a></li>
-<li><a class="" href="../Databases.html">Databases</a></li>
-<li><a class="" href="../Design.html">Design</a></li>
-<li><a class="" href="../Distributed_Systems.html">Distributed Systems</a></li>
+<li><a class="" href="../../index.html">index</a></li>
+<li><a class="" href="../../Authentication.html">Authentication</a></li>
+<li><a class="" href="../../DNS_Config.html">DNS Config</a></li>
+<li><a class="" href="../../Databases.html">Databases</a></li>
+<li><a class="" href="../../Design.html">Design</a></li>
+<li><a class="" href="../../Distributed_Systems.html">Distributed Systems</a></li>
 <li class="heading"><span>Django</span></li>
 <ul>
-<li><a class="" href="../Django/Django.html">Django</a></li>
-<li><a class="" href="../Django/Migrations.html">Migrations</a></li>
-<li><a class="" href="../Django/Models.html">Models</a></li>
-<li><a class="" href="../Django/Querysets.html">Querysets</a></li>
+<li><a class="" href="../../Django/Django.html">Django</a></li>
+<li><a class="" href="../../Django/Migrations.html">Migrations</a></li>
+<li><a class="" href="../../Django/Models.html">Models</a></li>
+<li><a class="" href="../../Django/Querysets.html">Querysets</a></li>
 </ul>
-<li><a class="" href="../Encoding.html">Encoding</a></li>
+<li><a class="" href="../../Encoding.html">Encoding</a></li>
 <li class="heading"><span>Entrepreneurship</span></li>
 <ul>
-<li><a class="" href="../Entrepreneurship/Acronyms.html">Acronyms</a></li>
-<li><a class="" href="../Entrepreneurship/Aquired_Episodes.html">Aquired Episodes</a></li>
-<li><a class="" href="../Entrepreneurship/Business_Analysis.html">Business Analysis</a></li>
-<li><a class="" href="../Entrepreneurship/Terminology.html">Terminology</a></li>
-<li><a class="" href="../Entrepreneurship/Venture_Capital.html">Venture Capital</a></li>
+<li><a class="" href="../../Entrepreneurship/Acronyms.html">Acronyms</a></li>
+<li><a class="" href="../../Entrepreneurship/Aquired_Episodes.html">Aquired Episodes</a></li>
+<li><a class="" href="../../Entrepreneurship/Business_Analysis.html">Business Analysis</a></li>
+<li><a class="" href="../../Entrepreneurship/Terminology.html">Terminology</a></li>
+<li><a class="" href="../../Entrepreneurship/Venture_Capital.html">Venture Capital</a></li>
 </ul>
-<li><a class="" href="../File_Sharing.html">File Sharing</a></li>
-<li><a class="" href="../Frontend.html">Frontend</a></li>
-<li><a class="" href="../HTML.html">HTML</a></li>
+<li><a class="" href="../../File_Sharing.html">File Sharing</a></li>
+<li><a class="" href="../../Frontend.html">Frontend</a></li>
+<li><a class="" href="../../HTML.html">HTML</a></li>
 <li class="heading"><span>JavaScript</span></li>
 <ul>
-<li><a class="" href="../JavaScript/Flux.html">Flux</a></li>
-<li><a class="" href="../JavaScript/JavaScript.html">JavaScript</a></li>
+<li><a class="" href="../Flux.html">Flux</a></li>
+<li><a class="" href="../JavaScript.html">JavaScript</a></li>
 <li class="heading"><span>React</span></li>
 <ul>
-<li><a class="" href="../JavaScript/React/Hooks.html">Hooks</a></li>
-<li><a class="" href="../JavaScript/React/Material-ui.html">Material ui</a></li>
-<li><a class="" href="../JavaScript/React/React-router.html">React router</a></li>
-<li><a class="" href="../JavaScript/React/React.html">React</a></li>
-<li><a class="" href="../JavaScript/React/Testing.html">Testing</a></li>
+<li><a class="" href="Hooks.html">Hooks</a></li>
+<li><a class="" href="Material-ui.html">Material ui</a></li>
+<li><a class="active" href="React-router.html">React router</a></li>
+<li><a class="" href="React.html">React</a></li>
+<li><a class="" href="Testing.html">Testing</a></li>
 </ul>
-<li><a class="" href="../JavaScript/SPAs.html">SPAs</a></li>
-<li><a class="" href="../JavaScript/Vue.html">Vue</a></li>
+<li><a class="" href="../SPAs.html">SPAs</a></li>
+<li><a class="" href="../Vue.html">Vue</a></li>
 </ul>
-<li><a class="" href="../Python.html">Python</a></li>
-<li><a class="" href="../SCSS.html">SCSS</a></li>
-<li><a class="" href="../SoftwareDev_BestPractices.html">SoftwareDev BestPractices</a></li>
+<li><a class="" href="../../Python.html">Python</a></li>
+<li><a class="" href="../../SCSS.html">SCSS</a></li>
+<li><a class="" href="../../SoftwareDev_BestPractices.html">SoftwareDev BestPractices</a></li>
 <li class="heading"><span>TCP IP</span></li>
 <ul>
-<li><a class="" href="ARP-RARP.html">ARP RARP</a></li>
-<li><a class="" href="ICMP.html">ICMP</a></li>
-<li><a class="" href="IP_Addresses.html">IP Addresses</a></li>
-<li><a class="active" href="IP_Fragmentation.html">IP Fragmentation</a></li>
-<li><a class="" href="IP_Subnets.html">IP Subnets</a></li>
-<li><a class="" href="Network_Layers.html">Network Layers</a></li>
-<li><a class="" href="TCP-IP.html">TCP IP</a></li>
-<li><a class="" href="Unix_Specific.html">Unix Specific</a></li>
-<li><a class="" href="routing.html">routing</a></li>
+<li><a class="" href="../../TCP-IP/ARP-RARP.html">ARP RARP</a></li>
+<li><a class="" href="../../TCP-IP/ICMP.html">ICMP</a></li>
+<li><a class="" href="../../TCP-IP/IP_Addresses.html">IP Addresses</a></li>
+<li><a class="" href="../../TCP-IP/IP_Fragmentation.html">IP Fragmentation</a></li>
+<li><a class="" href="../../TCP-IP/IP_Subnets.html">IP Subnets</a></li>
+<li><a class="" href="../../TCP-IP/Network_Layers.html">Network Layers</a></li>
+<li><a class="" href="../../TCP-IP/TCP-IP.html">TCP IP</a></li>
+<li><a class="" href="../../TCP-IP/Unix_Specific.html">Unix Specific</a></li>
+<li><a class="" href="../../TCP-IP/routing.html">routing</a></li>
 </ul>
-<li><a class="" href="../docker-compose.html">docker compose</a></li>
+<li><a class="" href="../../docker-compose.html">docker compose</a></li>
 </ul>
     </nav>
     <article id="main" class="content">
@@ -686,12 +686,25 @@
 
       </div>
       
-      <h1 id="ip-fragmentation">IP Fragmentation <a class="heading-anchor-permalink" href="#ip-fragmentation">#</a></h1>
+      <h1 id="react-router">React Router <a class="heading-anchor-permalink" href="#react-router">#</a></h1>
 <ul>
-<li>IP fragmentation (splitting up a stream of data into multiple IP packets) occurs at the IP layer and thus is transparent to TCP/UDP</li>
-<li>However, in order to reduce bugs, TCP generally doesn’t send packets to the IP layer requiring fragmentation, handling the breaking up of the packets itself instead</li>
-<li>Datagram: A datagram is the entire unit of end-to-end transmission sent</li>
-<li>Packet: The data (potentially fragmented) that is actually sent</li>
+<li>Generally you wrap the top-level component of your app with <code>&lt;Router&gt;</code></li>
+<li>Anywhere in your app you can then have a</li>
+</ul>
+<pre><code class="language-HTML">&lt;Switch&gt;
+    &lt;Route path=&quot;/path&quot;&gt;
+        &lt;ComponentToRenderIfPathIsMatched /&gt;
+    &lt;/Router&gt;
+&lt;/Switch&gt;
+</code></pre>
+<p>to match a path and render a compoonent</p>
+<ul>
+<li>
+<p>While there is a way to have a route configuration like in <code>vue-router</code> you generally do conditional rendering with <code>Switch</code> and nested <code>Switch</code> statements</p>
+</li>
+<li>
+<p>To nest switches you put them in other components but still have to use the full path (e.g. <code>/accounts/add</code>)</p>
+</li>
 </ul>
 
     </article>
