--- a/_til_docs/Databases.html
+++ b/_til_docs/Databases.html
@@ -592,6 +592,16 @@
       background: rgba(0, 0, 0, 0.05);
     }
 
+    .page-header {
+      border-bottom: 1px solid rgb(228, 230, 232);
+      padding-bottom: .5rem;
+      font-size: 2.07692308rem;
+      font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
+      line-height: 1.35;
+      font-weight: normal;
+      color: rgb(60, 65, 70);
+    }
+
     #search-result-links {
       margin-bottom: 1rem;
     }
@@ -613,6 +623,7 @@
 <li><a class="" href="Authentication.html">Authentication</a></li>
 <li><a class="" href="DNS_Config.html">DNS Config</a></li>
 <li><a class="active" href="Databases.html">Databases</a></li>
+<li><a class="" href="Design.html">Design</a></li>
 <li><a class="" href="Distributed_Systems.html">Distributed Systems</a></li>
 <li class="heading"><span>Django</span></li>
 <ul>
@@ -621,6 +632,7 @@
 <li><a class="" href="Django/Models.html">Models</a></li>
 <li><a class="" href="Django/Querysets.html">Querysets</a></li>
 </ul>
+<li><a class="" href="Encoding.html">Encoding</a></li>
 <li class="heading"><span>Entrepreneurship</span></li>
 <ul>
 <li><a class="" href="Entrepreneurship/Acronyms.html">Acronyms</a></li>
@@ -631,14 +643,25 @@
 </ul>
 <li><a class="" href="File_Sharing.html">File Sharing</a></li>
 <li><a class="" href="Frontend.html">Frontend</a></li>
+<li><a class="" href="HTML.html">HTML</a></li>
 <li class="heading"><span>JavaScript</span></li>
 <ul>
 <li><a class="" href="JavaScript/Flux.html">Flux</a></li>
 <li><a class="" href="JavaScript/JavaScript.html">JavaScript</a></li>
-<li><a class="" href="JavaScript/React.html">React</a></li>
+<li class="heading"><span>React</span></li>
+<ul>
+<li><a class="" href="JavaScript/React/Hooks.html">Hooks</a></li>
+<li><a class="" href="JavaScript/React/Material-ui.html">Material ui</a></li>
+<li><a class="" href="JavaScript/React/React-router.html">React router</a></li>
+<li><a class="" href="JavaScript/React/React.html">React</a></li>
+<li><a class="" href="JavaScript/React/Testing.html">Testing</a></li>
+</ul>
+<li><a class="" href="JavaScript/SPAs.html">SPAs</a></li>
 <li><a class="" href="JavaScript/Vue.html">Vue</a></li>
 </ul>
 <li><a class="" href="Python.html">Python</a></li>
+<li><a class="" href="SCSS.html">SCSS</a></li>
+<li><a class="" href="SoftwareDev_BestPractices.html">SoftwareDev BestPractices</a></li>
 <li class="heading"><span>TCP IP</span></li>
 <ul>
 <li><a class="" href="TCP-IP/ARP-RARP.html">ARP RARP</a></li>
@@ -655,12 +678,14 @@
 </ul>
     </nav>
     <article id="main" class="content">
-      <label class="mdb-main-label active" style="active-color">Search Articles</label>
+      <h1 id="page-title" class="page-header">Default</h1>
+
+      <label class="mdb-main-label active">Search Articles</label>
       <input id="article-search" type="text" class="w-100 search-input" placeholder="Vue..."></input>
       <div id="search-result-links">
 
       </div>
-
+      
       <h2 id="transactional-ddl">Transactional DDL <a class="heading-anchor-permalink" href="#transactional-ddl">#</a></h2>
 <ul>
 <li>DDL (Database Design Language), e.g. <code>SQL</code></li>
@@ -778,7 +803,6 @@
     }
     loadJSON("/contents.json", (data) => {
       contentsData = data.contents;
-      console.log(contentsData);
       searchFuse = new Fuse(contentsData, fuseOptions);
     }, (fail) => console.error(fail));
 
@@ -787,6 +811,24 @@
 
     // Uncomment the below line to autofocus
     /* searchInput.focus(); */
+  </script>
+
+  <!-- Set header for each file to its filename -->
+  <script>
+
+    let headerEl = document.getElementById('page-title')
+    let page = window.location.pathname
+    //Strip trailing / if there is one
+    page = page.replace(/\/+$/, "");
+
+    page = page.replace(/_/g, ' ')
+
+    //Get only the last part of the url
+    let title = page.substring(page.lastIndexOf('/') + 1)
+    title = title || "Home"
+    headerEl.textContent = title
+
+
   </script>
 
   <script>
