--- a/_til_docs/Design.html
+++ b/_til_docs/Design.html
@@ -592,6 +592,16 @@
       background: rgba(0, 0, 0, 0.05);
     }
 
+    .page-header {
+      border-bottom: 1px solid rgb(228, 230, 232);
+      padding-bottom: .5rem;
+      font-size: 2.07692308rem;
+      font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
+      line-height: 1.35;
+      font-weight: normal;
+      color: rgb(60, 65, 70);
+    }
+
     #search-result-links {
       margin-bottom: 1rem;
     }
@@ -609,62 +619,94 @@
     </a>
     <nav id="menu">
       <ul>
-<li><a class="" href="../index.html">index</a></li>
-<li><a class="" href="../Authentication.html">Authentication</a></li>
-<li><a class="" href="../DNS_Config.html">DNS Config</a></li>
-<li><a class="" href="../Databases.html">Databases</a></li>
-<li><a class="" href="../Distributed_Systems.html">Distributed Systems</a></li>
+<li><a class="" href="index.html">index</a></li>
+<li><a class="" href="Authentication.html">Authentication</a></li>
+<li><a class="" href="DNS_Config.html">DNS Config</a></li>
+<li><a class="" href="Databases.html">Databases</a></li>
+<li><a class="active" href="Design.html">Design</a></li>
+<li><a class="" href="Distributed_Systems.html">Distributed Systems</a></li>
 <li class="heading"><span>Django</span></li>
 <ul>
-<li><a class="" href="../Django/Django.html">Django</a></li>
-<li><a class="" href="../Django/Migrations.html">Migrations</a></li>
-<li><a class="" href="../Django/Models.html">Models</a></li>
-<li><a class="" href="../Django/Querysets.html">Querysets</a></li>
+<li><a class="" href="Django/Django.html">Django</a></li>
+<li><a class="" href="Django/Migrations.html">Migrations</a></li>
+<li><a class="" href="Django/Models.html">Models</a></li>
+<li><a class="" href="Django/Querysets.html">Querysets</a></li>
 </ul>
+<li><a class="" href="Encoding.html">Encoding</a></li>
 <li class="heading"><span>Entrepreneurship</span></li>
 <ul>
-<li><a class="" href="../Entrepreneurship/Acronyms.html">Acronyms</a></li>
-<li><a class="" href="../Entrepreneurship/Aquired_Episodes.html">Aquired Episodes</a></li>
-<li><a class="" href="../Entrepreneurship/Business_Analysis.html">Business Analysis</a></li>
-<li><a class="" href="../Entrepreneurship/Terminology.html">Terminology</a></li>
-<li><a class="" href="../Entrepreneurship/Venture_Capital.html">Venture Capital</a></li>
+<li><a class="" href="Entrepreneurship/Acronyms.html">Acronyms</a></li>
+<li><a class="" href="Entrepreneurship/Aquired_Episodes.html">Aquired Episodes</a></li>
+<li><a class="" href="Entrepreneurship/Business_Analysis.html">Business Analysis</a></li>
+<li><a class="" href="Entrepreneurship/Terminology.html">Terminology</a></li>
+<li><a class="" href="Entrepreneurship/Venture_Capital.html">Venture Capital</a></li>
 </ul>
-<li><a class="" href="../File_Sharing.html">File Sharing</a></li>
-<li><a class="" href="../Frontend.html">Frontend</a></li>
+<li><a class="" href="File_Sharing.html">File Sharing</a></li>
+<li><a class="" href="Frontend.html">Frontend</a></li>
+<li><a class="" href="HTML.html">HTML</a></li>
 <li class="heading"><span>JavaScript</span></li>
 <ul>
-<li><a class="" href="Flux.html">Flux</a></li>
-<li><a class="" href="JavaScript.html">JavaScript</a></li>
-<li><a class="active" href="React.html">React</a></li>
-<li><a class="" href="Vue.html">Vue</a></li>
+<li><a class="" href="JavaScript/Flux.html">Flux</a></li>
+<li><a class="" href="JavaScript/JavaScript.html">JavaScript</a></li>
+<li class="heading"><span>React</span></li>
+<ul>
+<li><a class="" href="JavaScript/React/Hooks.html">Hooks</a></li>
+<li><a class="" href="JavaScript/React/Material-ui.html">Material ui</a></li>
+<li><a class="" href="JavaScript/React/React-router.html">React router</a></li>
+<li><a class="" href="JavaScript/React/React.html">React</a></li>
+<li><a class="" href="JavaScript/React/Testing.html">Testing</a></li>
 </ul>
-<li><a class="" href="../Python.html">Python</a></li>
+<li><a class="" href="JavaScript/SPAs.html">SPAs</a></li>
+<li><a class="" href="JavaScript/Vue.html">Vue</a></li>
+</ul>
+<li><a class="" href="Python.html">Python</a></li>
+<li><a class="" href="SCSS.html">SCSS</a></li>
+<li><a class="" href="SoftwareDev_BestPractices.html">SoftwareDev BestPractices</a></li>
 <li class="heading"><span>TCP IP</span></li>
 <ul>
-<li><a class="" href="../TCP-IP/ARP-RARP.html">ARP RARP</a></li>
-<li><a class="" href="../TCP-IP/ICMP.html">ICMP</a></li>
-<li><a class="" href="../TCP-IP/IP_Addresses.html">IP Addresses</a></li>
-<li><a class="" href="../TCP-IP/IP_Fragmentation.html">IP Fragmentation</a></li>
-<li><a class="" href="../TCP-IP/IP_Subnets.html">IP Subnets</a></li>
-<li><a class="" href="../TCP-IP/Network_Layers.html">Network Layers</a></li>
-<li><a class="" href="../TCP-IP/TCP-IP.html">TCP IP</a></li>
-<li><a class="" href="../TCP-IP/Unix_Specific.html">Unix Specific</a></li>
-<li><a class="" href="../TCP-IP/routing.html">routing</a></li>
+<li><a class="" href="TCP-IP/ARP-RARP.html">ARP RARP</a></li>
+<li><a class="" href="TCP-IP/ICMP.html">ICMP</a></li>
+<li><a class="" href="TCP-IP/IP_Addresses.html">IP Addresses</a></li>
+<li><a class="" href="TCP-IP/IP_Fragmentation.html">IP Fragmentation</a></li>
+<li><a class="" href="TCP-IP/IP_Subnets.html">IP Subnets</a></li>
+<li><a class="" href="TCP-IP/Network_Layers.html">Network Layers</a></li>
+<li><a class="" href="TCP-IP/TCP-IP.html">TCP IP</a></li>
+<li><a class="" href="TCP-IP/Unix_Specific.html">Unix Specific</a></li>
+<li><a class="" href="TCP-IP/routing.html">routing</a></li>
 </ul>
-<li><a class="" href="../docker-compose.html">docker compose</a></li>
+<li><a class="" href="docker-compose.html">docker compose</a></li>
 </ul>
     </nav>
     <article id="main" class="content">
-      <label class="mdb-main-label active" style="active-color">Search Articles</label>
+      <h1 id="page-title" class="page-header">Default</h1>
+
+      <label class="mdb-main-label active">Search Articles</label>
       <input id="article-search" type="text" class="w-100 search-input" placeholder="Vue..."></input>
       <div id="search-result-links">
 
       </div>
-
-      <h3 id="syntax-basics">Syntax Basics <a class="heading-anchor-permalink" href="#syntax-basics">#</a></h3>
+      
+      <h4 id="icons">Icons <a class="heading-anchor-permalink" href="#icons">#</a></h4>
 <ul>
-<li>Curly braces in <code>JSX</code> execute a JavaScript expression at compile time</li>
-<li><code>&lt;Component {...obj}/&gt;</code> to pass all the attributes of <code>obj</code> in as props to <code>Component</code></li>
+<li>Font icons are icons from fonts that support ligatures, where svg icons are made out of svg’s
+<ul>
+<li>svg’s load faster</li>
+</ul>
+</li>
+</ul>
+<h4 id="color">Color <a class="heading-anchor-permalink" href="#color">#</a></h4>
+<ul>
+<li>Pallette: A collection of colors, i.e. hues and shades</li>
+</ul>
+<h2 id="general-guidelines">General Guidelines <a class="heading-anchor-permalink" href="#general-guidelines">#</a></h2>
+<ul>
+<li>Links should have specific text (e.g. <a href="#">learn more</a>), not something like <a href="#">click here</a></li>
+<li><code>normalize.css</code> - A library that provides a standard set of CSS styles for HTML elements
+<ul>
+<li>While you don’t have to use <code>normalize.css</code>, you should set standard sensible styles for DOM elements</li>
+</ul>
+</li>
+<li>Use radio buttons only when the user needs to see all the options. Otherwise, consider using something like a dropdown</li>
 </ul>
 
     </article>
@@ -770,7 +812,6 @@
     }
     loadJSON("/contents.json", (data) => {
       contentsData = data.contents;
-      console.log(contentsData);
       searchFuse = new Fuse(contentsData, fuseOptions);
     }, (fail) => console.error(fail));
 
@@ -779,6 +820,24 @@
 
     // Uncomment the below line to autofocus
     /* searchInput.focus(); */
+  </script>
+
+  <!-- Set header for each file to its filename -->
+  <script>
+
+    let headerEl = document.getElementById('page-title')
+    let page = window.location.pathname
+    //Strip trailing / if there is one
+    page = page.replace(/\/+$/, "");
+
+    page = page.replace(/_/g, ' ')
+
+    //Get only the last part of the url
+    let title = page.substring(page.lastIndexOf('/') + 1)
+    title = title || "Home"
+    headerEl.textContent = title
+
+
   </script>
 
   <script>
