--- a/_til_docs/JavaScript/JavaScript.html
+++ b/_til_docs/JavaScript/JavaScript.html
@@ -592,6 +592,16 @@
       background: rgba(0, 0, 0, 0.05);
     }
 
+    .page-header {
+      border-bottom: 1px solid rgb(228, 230, 232);
+      padding-bottom: .5rem;
+      font-size: 2.07692308rem;
+      font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
+      line-height: 1.35;
+      font-weight: normal;
+      color: rgb(60, 65, 70);
+    }
+
     #search-result-links {
       margin-bottom: 1rem;
     }
@@ -613,6 +623,7 @@
 <li><a class="" href="../Authentication.html">Authentication</a></li>
 <li><a class="" href="../DNS_Config.html">DNS Config</a></li>
 <li><a class="" href="../Databases.html">Databases</a></li>
+<li><a class="" href="../Design.html">Design</a></li>
 <li><a class="" href="../Distributed_Systems.html">Distributed Systems</a></li>
 <li class="heading"><span>Django</span></li>
 <ul>
@@ -621,6 +632,7 @@
 <li><a class="" href="../Django/Models.html">Models</a></li>
 <li><a class="" href="../Django/Querysets.html">Querysets</a></li>
 </ul>
+<li><a class="" href="../Encoding.html">Encoding</a></li>
 <li class="heading"><span>Entrepreneurship</span></li>
 <ul>
 <li><a class="" href="../Entrepreneurship/Acronyms.html">Acronyms</a></li>
@@ -631,14 +643,25 @@
 </ul>
 <li><a class="" href="../File_Sharing.html">File Sharing</a></li>
 <li><a class="" href="../Frontend.html">Frontend</a></li>
+<li><a class="" href="../HTML.html">HTML</a></li>
 <li class="heading"><span>JavaScript</span></li>
 <ul>
 <li><a class="" href="Flux.html">Flux</a></li>
 <li><a class="active" href="JavaScript.html">JavaScript</a></li>
-<li><a class="" href="React.html">React</a></li>
+<li class="heading"><span>React</span></li>
+<ul>
+<li><a class="" href="React/Hooks.html">Hooks</a></li>
+<li><a class="" href="React/Material-ui.html">Material ui</a></li>
+<li><a class="" href="React/React-router.html">React router</a></li>
+<li><a class="" href="React/React.html">React</a></li>
+<li><a class="" href="React/Testing.html">Testing</a></li>
+</ul>
+<li><a class="" href="SPAs.html">SPAs</a></li>
 <li><a class="" href="Vue.html">Vue</a></li>
 </ul>
 <li><a class="" href="../Python.html">Python</a></li>
+<li><a class="" href="../SCSS.html">SCSS</a></li>
+<li><a class="" href="../SoftwareDev_BestPractices.html">SoftwareDev BestPractices</a></li>
 <li class="heading"><span>TCP IP</span></li>
 <ul>
 <li><a class="" href="../TCP-IP/ARP-RARP.html">ARP RARP</a></li>
@@ -655,12 +678,14 @@
 </ul>
     </nav>
     <article id="main" class="content">
-      <label class="mdb-main-label active" style="active-color">Search Articles</label>
+      <h1 id="page-title" class="page-header">Default</h1>
+
+      <label class="mdb-main-label active">Search Articles</label>
       <input id="article-search" type="text" class="w-100 search-input" placeholder="Vue..."></input>
       <div id="search-result-links">
 
       </div>
-
+      
       <h3 id="rendering-engines-vs.-javascript-engine">Rendering Engines vs. Javascript Engine <a class="heading-anchor-permalink" href="#rendering-engines-vs.-javascript-engine">#</a></h3>
 <p>A Javascript engine, like <code>v8</code> is the engine that processes and runs the webpage JavaScript. “Hot” code paths are optimized for quicker execution (e.g. looking up a property in an object directly). The browser JavaScript engine queries the rendering engine for displaying things.</p>
 <p>A browser rendering engine, e.g. <code>Gecko</code> and <code>Webkit</code> displays the webpages written in the markup language. This interprets <code>HTML</code>, <code>CSS</code>, <code>XML</code>, images, etc. and produces the final webpage for the browser.</p>
@@ -668,7 +693,27 @@
 <ul>
 <li>When you inherit a class and it does not override the constructor it calls the parent constructor by default</li>
 <li><code>Array.slice()</code> returns a shallow copy of an array</li>
+<li>The spread operator <code>...</code> was originally added for arrays in es6. However, a later change enabled the spread operator to be used with objects too, e.g. <code>const newObj = {...obj}</code></li>
+<li>You can compress bundles with <code>gzip</code>, <code>bzip</code>, etc. to greatly reduce bundle size</li>
+<li>Wrapping code that spans multiple lines with <code>()</code> prevents the pitfalls of automatic semicolon insertion</li>
+<li>In JavaScript, class methods are not bound by default. That means that the class method’s <code>this</code> keyword will not always refer to the class itself - it will refer to whatever called the function
+<ul>
+<li>To bind the function to the class you can do <code>this.myFunc = this.myFunc.bind(this)</code> in the class constructor</li>
 </ul>
+</li>
+<li>Computed property syntax: <code>[varName]</code> -&gt; will result in the string value of <code>varName</code></li>
+</ul>
+<p>e.g.</p>
+<pre><code class="language-JavaScript">myVar = &quot;computedPropName&quot;
+{
+    [myVar]: &quot;computedPropValue
+}
+</code></pre>
+<p>will result in</p>
+<pre><code class="language-JavaScript">{
+    computedPropName: &quot;computedPropValue
+}
+</code></pre>
 
     </article>
   </div>
@@ -773,7 +818,6 @@
     }
     loadJSON("/contents.json", (data) => {
       contentsData = data.contents;
-      console.log(contentsData);
       searchFuse = new Fuse(contentsData, fuseOptions);
     }, (fail) => console.error(fail));
 
@@ -782,6 +826,24 @@
 
     // Uncomment the below line to autofocus
     /* searchInput.focus(); */
+  </script>
+
+  <!-- Set header for each file to its filename -->
+  <script>
+
+    let headerEl = document.getElementById('page-title')
+    let page = window.location.pathname
+    //Strip trailing / if there is one
+    page = page.replace(/\/+$/, "");
+
+    page = page.replace(/_/g, ' ')
+
+    //Get only the last part of the url
+    let title = page.substring(page.lastIndexOf('/') + 1)
+    title = title || "Home"
+    headerEl.textContent = title
+
+
   </script>
 
   <script>
