--- a/_til_docs/JavaScript/SPAs.html
+++ b/_til_docs/JavaScript/SPAs.html
@@ -646,33 +646,33 @@
 <li><a class="" href="../HTML.html">HTML</a></li>
 <li class="heading"><span>JavaScript</span></li>
 <ul>
-<li><a class="" href="../JavaScript/Flux.html">Flux</a></li>
-<li><a class="" href="../JavaScript/JavaScript.html">JavaScript</a></li>
+<li><a class="" href="Flux.html">Flux</a></li>
+<li><a class="" href="JavaScript.html">JavaScript</a></li>
 <li class="heading"><span>React</span></li>
 <ul>
-<li><a class="" href="../JavaScript/React/Hooks.html">Hooks</a></li>
-<li><a class="" href="../JavaScript/React/Material-ui.html">Material ui</a></li>
-<li><a class="" href="../JavaScript/React/React-router.html">React router</a></li>
-<li><a class="" href="../JavaScript/React/React.html">React</a></li>
-<li><a class="" href="../JavaScript/React/Testing.html">Testing</a></li>
+<li><a class="" href="React/Hooks.html">Hooks</a></li>
+<li><a class="" href="React/Material-ui.html">Material ui</a></li>
+<li><a class="" href="React/React-router.html">React router</a></li>
+<li><a class="" href="React/React.html">React</a></li>
+<li><a class="" href="React/Testing.html">Testing</a></li>
 </ul>
-<li><a class="" href="../JavaScript/SPAs.html">SPAs</a></li>
-<li><a class="" href="../JavaScript/Vue.html">Vue</a></li>
+<li><a class="active" href="SPAs.html">SPAs</a></li>
+<li><a class="" href="Vue.html">Vue</a></li>
 </ul>
 <li><a class="" href="../Python.html">Python</a></li>
 <li><a class="" href="../SCSS.html">SCSS</a></li>
 <li><a class="" href="../SoftwareDev_BestPractices.html">SoftwareDev BestPractices</a></li>
 <li class="heading"><span>TCP IP</span></li>
 <ul>
-<li><a class="" href="ARP-RARP.html">ARP RARP</a></li>
-<li><a class="" href="ICMP.html">ICMP</a></li>
-<li><a class="" href="IP_Addresses.html">IP Addresses</a></li>
-<li><a class="active" href="IP_Fragmentation.html">IP Fragmentation</a></li>
-<li><a class="" href="IP_Subnets.html">IP Subnets</a></li>
-<li><a class="" href="Network_Layers.html">Network Layers</a></li>
-<li><a class="" href="TCP-IP.html">TCP IP</a></li>
-<li><a class="" href="Unix_Specific.html">Unix Specific</a></li>
-<li><a class="" href="routing.html">routing</a></li>
+<li><a class="" href="../TCP-IP/ARP-RARP.html">ARP RARP</a></li>
+<li><a class="" href="../TCP-IP/ICMP.html">ICMP</a></li>
+<li><a class="" href="../TCP-IP/IP_Addresses.html">IP Addresses</a></li>
+<li><a class="" href="../TCP-IP/IP_Fragmentation.html">IP Fragmentation</a></li>
+<li><a class="" href="../TCP-IP/IP_Subnets.html">IP Subnets</a></li>
+<li><a class="" href="../TCP-IP/Network_Layers.html">Network Layers</a></li>
+<li><a class="" href="../TCP-IP/TCP-IP.html">TCP IP</a></li>
+<li><a class="" href="../TCP-IP/Unix_Specific.html">Unix Specific</a></li>
+<li><a class="" href="../TCP-IP/routing.html">routing</a></li>
 </ul>
 <li><a class="" href="../docker-compose.html">docker compose</a></li>
 </ul>
@@ -686,12 +686,9 @@
 
       </div>
       
-      <h1 id="ip-fragmentation">IP Fragmentation <a class="heading-anchor-permalink" href="#ip-fragmentation">#</a></h1>
+      <h2 id="documentation">Documentation <a class="heading-anchor-permalink" href="#documentation">#</a></h2>
 <ul>
-<li>IP fragmentation (splitting up a stream of data into multiple IP packets) occurs at the IP layer and thus is transparent to TCP/UDP</li>
-<li>However, in order to reduce bugs, TCP generally doesn’t send packets to the IP layer requiring fragmentation, handling the breaking up of the packets itself instead</li>
-<li>Datagram: A datagram is the entire unit of end-to-end transmission sent</li>
-<li>Packet: The data (potentially fragmented) that is actually sent</li>
+<li>Can use <code>Storybook</code> to have an elegant documentation solution for all of your components</li>
 </ul>
 
     </article>
