--- a/til_docs/template.html
+++ b/til_docs/template.html
@@ -592,6 +592,16 @@
       background: rgba(0, 0, 0, 0.05);
     }
 
+    .page-header {
+      border-bottom: 1px solid rgb(228, 230, 232);
+      padding-bottom: .5rem;
+      font-size: 2.07692308rem;
+      font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
+      line-height: 1.35;
+      font-weight: normal;
+      color: rgb(60, 65, 70);
+    }
+
     #search-result-links {
       margin-bottom: 1rem;
     }
@@ -611,12 +621,14 @@
       <!--NAV-->
     </nav>
     <article id="main" class="content">
-      <label class="mdb-main-label active" style="active-color">Search Articles</label>
+      <h1 id="page-title" class="page-header">Default</h1>
+
+      <label class="mdb-main-label active">Search Articles</label>
       <input id="article-search" type="text" class="w-100 search-input" placeholder="Vue..."></input>
       <div id="search-result-links">
 
       </div>
-
+      
       <!--CONTENT-->
     </article>
   </div>
@@ -721,7 +733,6 @@
     }
     loadJSON("/contents.json", (data) => {
       contentsData = data.contents;
-      console.log(contentsData);
       searchFuse = new Fuse(contentsData, fuseOptions);
     }, (fail) => console.error(fail));
 
@@ -730,6 +741,24 @@
 
     // Uncomment the below line to autofocus
     /* searchInput.focus(); */
+  </script>
+
+  <!-- Set header for each file to its filename -->
+  <script>
+
+    let headerEl = document.getElementById('page-title')
+    let page = window.location.pathname
+    //Strip trailing / if there is one
+    page = page.replace(/\/+$/, "");
+
+    page = page.replace(/_/g, ' ')
+
+    //Get only the last part of the url
+    let title = page.substring(page.lastIndexOf('/') + 1)
+    title = title || "Home"
+    headerEl.textContent = title
+
+
   </script>
 
   <script>
