--- a/til_docs/template.html
+++ b/til_docs/template.html
@@ -615,8 +615,14 @@
       margin-bottom: 1rem;
     }
 
-    .shuffle-page:hover {
+    .action-icon:hover {
       cursor: pointer;
+    }
+
+    .next-page {
+      color:black;
+      font-size: 1.75rem;
+      margin-left: .25rem;
     }
 
   </style>
@@ -638,8 +644,11 @@
       <h1 id="page-title" class="page-header"></h1>
       <div class="search-label-block">
         <label class="mdb-main-label active search-articles-label">Search Articles</label>
-        <a onclick="linkToRandomPage()" class="shuffle-page">
+        <a onclick="linkToRandomPage()" class="shuffle-page action-icon">
           <img src="/public/shuffle.svg" width="23" height="40" />
+        </a>
+        <a class="next-page action-icon" onClick="goToNextPage()">
+          &rarr;
         </a>
       </div>
       <input id="article-search" type="text" class="w-100 search-input" placeholder="Vue..."></input>
@@ -725,10 +734,24 @@
       searchResultsDiv.innerHTML = "";
     }
 
+    function goToNextPage() {
+      const currentPath = window.location.pathname.slice(1) // remove initial slash
+      const currentIndex = contentsData.findIndex(content => {
+          let url = content.url
+          if (url.endsWith('.html')) {
+            url = url.slice(0, -5)
+          }
+          return url === currentPath
+      })
+
+      const nextIndex = currentPath === '' ? 1 : currentIndex + 1
+      const nextIndexToUse = nextIndex < 0 || nextIndex >= contentsData.length ? 0 : nextIndex
+      window.location.pathname = contentsData[nextIndexToUse].url
+    }
+
     function linkToRandomPage(){
       let randomIndex = Math.floor(Math.random() * contentsData.length )
       let randomPage = contentsData[randomIndex]
-      let url = `/${randomPage.url}`
       window.location.pathname = randomPage.url
     }
 
