[Scroll] Add hover pointer

--- a/til_docs/template.html
+++ b/til_docs/template.html
@@ -602,6 +602,9 @@
       padding-top: .5rem;
       border-top: 1px solid var(--border-color);
     }
+    .back-to-top:hover {
+      cursor: pointer;
+    }
 
     .page-header {
       border-bottom: 1px solid var(--border-color);
