--- a/til_docs/template.html
+++ b/til_docs/template.html
@@ -700,6 +700,15 @@
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="utf-8" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-H8SM6X0QK1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-H8SM6X0QK1');
+  </script>
 </head>
 
 <body>
