[Styling] Prevent flash

--- a/til_docs/template.html
+++ b/til_docs/template.html
@@ -640,6 +640,7 @@
     }
 
     .twitter-follow-container > iframe.twitter-follow-button-rendered {
+        opacity: 0;
         /* Forwards means this element will retain opacity 1 after animation */
         animation: fadeIn 2s cubic-bezier(1,.04,.4,1.03) 0s 1 normal forwards;
         -moz-animation: fadeIn 2s cubic-bezier(1,.04,.4,1.03) 0s 1 normal forwards;
