[HTML] Update html title for analytics

--- a/til_docs/template.html
+++ b/til_docs/template.html
@@ -912,7 +912,7 @@
     title = title.substring(0, 1).toUpperCase().concat(title.substring(1))
     title = title || "Home"
     headerEl.textContent = title
-  </script>
+    document.title = title
 
 
   <script>
